# ThsFactorSdk

./: ASYNC_VS_SYNC.md  CMakeLists.txt  CMakeLists_asyn.txt  CMakeLists_sync.txt  README.md  README_SYNC.md  build_sync.bat  build_sync.sh  test_header.cpp  version.txt
demo/: init.ini  main.cpp  main_sync.cpp  push_callback_example.cpp  test_concurrent.cpp
include/: ThsFactorSdk.h  ThsFactorSdkSync.h
lib/: LHSession.lib
so/: libiconv.so.2  qstudio
src/: ThsFactorSdkSync.cpp
